--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
             <div class="message-card">
                 <p class="message-text">
                     Dear Bhumika,<br><br>
-                    
+                    aegthfj
                     On this special day, I want you to know how incredibly amazing you are! 
                     Your smile lights up every room, and your kindness touches everyone around you. 
                     May this year bring you endless joy, unforgettable adventures, and all the 
@@ -39,4 +39,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html> 
