Add video button to birthday page
Added a button to watch a special video for Bhumika's birthday.

--- a/page3.html
+++ b/page3.html
@@ -17,39 +17,36 @@
                 <img src="img1.jpg" alt="Moment 1" class="photo-image">
                 <p class="photo-caption">Moment 1</p>
             </div>
-
             <div class="photo-frame">
                 <img src="img2.jpg" alt="Moment 2" class="photo-image">
                 <p class="photo-caption">Moment 2</p>
             </div>
-
             <div class="photo-frame">
                 <img src="img3.jpg" alt="Moment 3" class="photo-image">
                 <p class="photo-caption">Moment 3</p>
             </div>
-
             <div class="photo-frame">
                 <img src="img4.jpg" alt="Moment 4" class="photo-image">
                 <p class="photo-caption">Moment 4</p>
             </div>
-
             <div class="photo-frame">
                 <img src="img5.jpg" alt="Moment 5" class="photo-image">
                 <p class="photo-caption">Moment 5</p>
             </div>
-
             <div class="photo-frame">
                 <img src="img6.jpg" alt="Moment 6" class="photo-image">
                 <p class="photo-caption">Moment 6</p>
             </div>
         </div>
-
+        
         <div class="final-message">
             <h3>🎊 Happy Birthday Once Again, Bhumika! 🎊</h3>
             <p>May your day be filled with love, laughter, and cake! 🎂</p>
+            <button class="video-btn" onclick="window.open('video1.mp4', '_blank')">
+                <span class="video-icon">🎬</span>Watch Special Video
+            </button>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
